# react-fastapi-app

./: README.md
backend/: pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 8523e70c06ca_add_audit_log_table_new.py  9fdf0cb221d3_first_migration.py  b85863f6340d_add_user_model.py  bb906134c8a6_change_resource_id_to_varchar.py  cd4e24bed144_revert_resource_id_to_integer.py  dd0df0d13188_add_audit_log_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: audit_logs.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/middleware/: __init__.py  audit_log.py
backend/app/models/: __init__.py  audit_log.py  users.py
backend/app/repositories/: audit_log_repository.py  user_repository.py
backend/app/schemas/: audit_log.py  user.py
backend/app/service/: audit_log_service.py  user_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuditLogs.jsx  Dashboard.jsx  Layout.jsx  Sidebar.jsx
frontend/src/components/ui/: skeleton.jsx
